--- a/Kopi Kuy/index.html
+++ b/Kopi Kuy/index.html
@@ -9,8 +9,13 @@
     <title>Website Kopi Kuy</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
-<body>
+<style>
+    body {
+            background-image: url(images/background/bgkopi.png);
+            background-size: 20%;
+        }
+</style>
+<body> 
     <nav>
         <img class="logo" src="images/logo/logo_kuy.png">
         <div class="navigasi">
